# ChatCPP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: pushDocker.yml
Executable/: CMakeLists.txt  main.cpp
JsonFactory/: CMakeLists.txt
JsonFactory/include/: ArduinoJsonHeader.h  BaseJson.h  ErrorSerializer.h  RoomInfoSerializer.h
JsonFactory/source/: BaseJson.cpp  ErrorSerializer.cpp  RoomInfoSerializer.cpp
Server/: CMakeLists.txt
Server/include/: Preloader.hpp  RequestHandlerFactory.h  ServerApp.h  Socket.hpp
Server/include/handlers/: BaseHandler.h  ErrorRequestHandler.h  FileHandler.h  Mims.hpp  RoomInfoHandler.h  StaticPath.hpp  WebSocketHandler.h
Server/source/: RequestHandlerFactory.cpp  ServerApp.cpp
Server/source/handlers/: BaseHandler.cpp  ErrorRequestHandler.cpp  FileHandler.cpp  RoomInfoHandler.cpp  WebSocketHandler.cpp
static/scripts/: addedRoom.js  room.js
static/styles/: styles.css
static/templates/: addedRoom.html  index.html  room.html
static/templates/errPages/: 400.html  404.html  405.html  500.html
